--- a/index.html
+++ b/index.html
@@ -114,14 +114,41 @@
 
 <section id="about" class="container">
 
+    <div class="heading text-center">
+    <h1><span>Sobre</span> nós</h1>
+    </div>
+
+    <div class="row min-vh-100">
+
+        <div class="col-md-6 text-center text-md-left align-self-center content">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi recusandae iusto, perferendis earum laboriosam rerum et quisquam iste vel commodi corporis praesentium porro impedit ullam!</p>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Adipisci iure aliquam illum quaerat quia voluptate.</p>
+            <a href="#"><button>Saiba Mais</button></a>
+        </div>
+
+        <div class="col-md-6 image">
+            <img src="images/chef.png" alt="chef">
+        </div>
+
+    </div>
+
 </section>
 
-
-
-
-
-
 <!-- Sobres nos section ends  -->
+
+<!-- Section Pratos -->
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
