Update section pratos

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <nav>
         <ul>           
             <li> <a href="#home">Home</a></li>
-            <li> <a href="#pratos">Cardápio</a></li>
+            <li> <a href="#cardapio">Cardápio</a></li>
             <li> <a href="#special">Especialidade</a></li>            
             <li> <a href="#booking">Reserva</a></li> 
             <li> <a href="#about">Sobre nós</a></li>
@@ -136,7 +136,109 @@
 
 <!-- Sobres nos section ends  -->
 
-<!-- Section Pratos -->
+<!-- Section Pratos starts-->
+
+<section id="cardapio" class="container">
+
+    <div class="heading text-center">
+        <h1>Nosso <span>Cardápio</span></h1>
+    </div>
+
+    <div class="box-container">
+
+        <div class="box">
+            <img src="images/dishes.jpg" alt="Prato1">
+            <div class="info">
+                <H3>Prato1</H3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore quod optio, saepe tempora voluptates.</p>
+                <a href="#"><button>Veja</button></a>
+            </div>
+        </div>
+
+        <div class="box">
+            <img src="images/dishes.jpg" alt="Prato2">
+            <div class="info">
+                <H3>Prato2</H3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore quod optio, saepe tempora voluptates.</p>
+                <a href="#"><button>Veja</button></a>
+            </div>
+        </div>
+        <div class="box">
+            <img src="images/dishes.jpg" alt="Prato3">
+            <div class="info">
+                <H3>Prato3</H3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore quod optio, saepe tempora voluptates.</p>
+                <a href="#"><button>Veja</button></a>
+            </div>
+        </div>
+        <div class="box">
+            <img src="images/dishes.jpg" alt="Prato4">
+            <div class="info">
+                <H3>Prato4</H3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore quod optio, saepe tempora voluptates.</p>
+                <a href="#"><button>Veja</button></a>
+            </div>
+        </div>
+        <div class="box">
+            <img src="images/dishes.jpg" alt="Prato5">
+            <div class="info">
+                <H3>Prato5</H3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore quod optio, saepe tempora voluptates.</p>
+                <a href="#"><button>Veja</button></a>
+            </div>
+        </div>
+        <div class="box">
+            <img src="images/dishes.jpg" alt="Prato6">
+            <div class="info">
+                <H3>Prato6</H3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore quod optio, saepe tempora voluptates.</p>
+                <a href="#"><button>Veja</button></a>
+            </div>
+        </div>
+
+    </div>
+
+</section>
+
+<!-- Section Pratos ends-->
+
+<!-- Section reserva starts-->
+
+<section id="booking" class="container-fluid">
+
+    <div class="heading text-center">
+        <h1>Faça<span> Reserva</span></h1>
+    </div>
+
+    <div class="row justify-content-center">
+
+        <form action="" class="col-md-7">
+
+            <div class="inputBox">
+                <input type="text" required>
+                <h3>Nome Completo</h3>
+            </div>
+
+            <div class="inputBox">
+                <input type="email" required >
+                <h3>E-mail</h3>
+            </div>
+
+            <div class="inputBox required">
+                <textarea required name="" id="" cols="30" rows="10"></textarea>
+                <h3>data</h3>
+            </div>
+
+            <input type="submit" value="enviar">
+
+
+
+        </form>
+
+    </div>
+
+</section>
+<!-- Section reserva ends-->
 
 
 
