Update footer section

--- a/index.html
+++ b/index.html
@@ -232,12 +232,49 @@
         </form>
     </div>
 
-
-
-
-
 </section>
 <!-- Section reserva ends-->
+
+
+    <!-- footer section starts-->
+    <section id="footer" class="container-fluid">
+        <div class="row align-items-center">
+            <div class="col-md-4 brand">
+                <a href="#" class="logo"><img src="images/logo.png" alt="imagem logo"></a>
+
+                <div class="icons">
+                    <a href="#" class="fab fa-facebook-square"></a>
+                    <a href="#" class="fab fa-twitter-square"></a>
+                    <a href="#" class="fab fa-instagram-square"></a>
+                    <a href="#" class="fab fa-pinterest-square"></a>
+                </div>
+            </div>
+
+            <div class="col-md-4 footer-links">
+                <h3>Links:</h3>
+              <a href="#home">Home</a>
+              <a href="#cardapio">Cardápio</a>
+              <a href="#special">Especialidade</a>            
+              <a href="#booking">Reserva</a> 
+              <a href="#about">Sobre nós</a>
+            </div>
+
+            <div class="col-md-4 text-center text-md-left letter">
+                <h2>Newletter</h2>
+                <input type="text"><br>
+                <input type="submit" value="increva-se">
+            </div>
+        </div>
+
+        <h1>&copy; copyright @ 2021 by <span>Wildson</span></h1>
+
+    </section>
+    <!-- footer section ends-->
+
+
+
+
+
 
 
 
