--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <div class="row min-vh-100 align-items-center">
 
             <div class="col-md-8 ml-md-5 text-md-left text-center caixa">
-                <h1>Cozinha Também É Arte</h1>
+                <h1>Cozinhar Também É Arte</h1>
                 <h2>Divirta-se Com Esse Sabor Maravilhoso</h2>
                 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Unde accusamus voluptates alias pariatur saepe deserunt ex magni, numquam ut. Impedit praesentium alias laboriosam similique iste illo dolorum consequatur nam sequi?</p>
                 <a href="#special"><button>PLAY</button></a>
@@ -128,7 +128,7 @@
         </div>
 
         <div class="box">
-            <img src="images/dishes.jpg" alt="Prato2">
+            <img src="images/dishes2.jpg" alt="Prato2">
             <div class="info">
                 <H3>Prato2</H3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore quod optio, saepe tempora voluptates.</p>
@@ -136,7 +136,7 @@
             </div>
         </div>
         <div class="box">
-            <img src="images/dishes.jpg" alt="Prato3">
+            <img src="images/dishes3.jpg" alt="Prato3">
             <div class="info">
                 <H3>Prato3</H3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore quod optio, saepe tempora voluptates.</p>
@@ -144,7 +144,7 @@
             </div>
         </div>
         <div class="box">
-            <img src="images/dishes.jpg" alt="Prato4">
+            <img src="images/dishes4.jpg" alt="Prato4">
             <div class="info">
                 <H3>Prato4</H3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore quod optio, saepe tempora voluptates.</p>
@@ -152,7 +152,7 @@
             </div>
         </div>
         <div class="box">
-            <img src="images/dishes.jpg" alt="Prato5">
+            <img src="images/dishes5.jpg" alt="Prato5">
             <div class="info">
                 <H3>Prato5</H3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore quod optio, saepe tempora voluptates.</p>
@@ -160,7 +160,7 @@
             </div>
         </div>
         <div class="box">
-            <img src="images/dishes.jpg" alt="Prato6">
+            <img src="images/dishes6.jpg" alt="Prato6">
             <div class="info">
                 <H3>Prato6</H3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore quod optio, saepe tempora voluptates.</p>
@@ -194,11 +194,20 @@
             <div class="inputBox">
                 <input type="email" required >
                 <h3>E-mail</h3>
+            </div>  
+            <div class="inputBox">                
+                <input type="date" required >
+                <h2>Data da Reserva</h2>                
             </div>
 
-            <div class="inputBox required">
-                <textarea required name="" id="" cols="30" rows="10"></textarea>
-                <h3>data</h3>
+            <div class="inputBox">                
+                <input type="time" required >
+                <h2>Horário da Reserva</h2>                 
+            </div>
+
+            <div class="inputBox">
+                <textarea name="" id="" cols="30" rows="10"></textarea>
+                <h3>Observações</h3>
             </div>
             <input type="submit" value="enviar">
         </form>
